--- a/laundry.html
+++ b/laundry.html
@@ -44,14 +44,14 @@
 
     <h2>Book Now</h2>
     <form action="">
-        <label for="">Name:</label>
-        <input type="text" name="" id="">
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="">
 
-        <label for="">Email:</label>
+        <label for="email">Email:</label>
         <input type="email">
 
-        <label for="">Phone:</label>
-        <input type="" name="" id="">
+        <label for="phone">Phone:</label>
+        <input type="tel" name="phone" id="">
 
         <input type="submit">
     </form>
