--- a/laundry.html
+++ b/laundry.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Laundry Wallah</title>
 </head>
 <style>
     table, th, td {
@@ -61,3 +61,4 @@
     </footer>
 </body>
 </html>
+
